<resources>
    <string name="app_name">飞鸟日记</string>
    <string name="app_name_en">Stray Birds</string>

    <string name="activity_common_sure">确定</string>
    <string name="activity_common_unsure">取消</string>

    <string name="activity_login_username">用户名</string>
    <string name="activity_login_password">密码</string>
    <string name="activity_login_set_question">设置问题以找回密码</string>
    <string name="activity_login_find_password">忘记密码?</string>
    <string name="activity_login_login">登录</string>
    <string name="activity_login_hint_name">1~15位字母、数字或汉字组合)</string>
    <string name="activity_login_hint_password">6~12位字母或数字组合</string>

    <string name="activity_login_dialog_title">请选择图像来源</string>
    <string-array name="activity_login_dialog_item">
        <item>打开相册</item>
        <item>拍照</item>
    </string-array>

    <string name="activity_set_question_item_1">点击下拉列表选择第一个问题:</string>
    <string name="activity_set_question_item_2">点击下拉列表选择第二个问题:</string>
    <string name="activity_set_question_item_3">点击下拉列表选择第三个问题:</string>
    <string name="activity_set_question_custom_hint">自定义问题</string>
    <string name="activity_set_question_answer_hint">请输入答案</string>
    <string name="activity_set_question_button_save">保存</string>

    <string name="test">这一定又是你的手指,轻弹着,在这深夜,稠密的悲思;我不禁颊边泛上了红,静听着,这深夜里弦子的生动.
        一声听从我心底穿过,忒凄凉,我懂得,但我又怎能应和?生命早就描定她的式样,太薄弱,是人们美丽的想象.除非在梦里有这么一天,
    你和我,同来攀动那根希望的弦.</string>

    <string name="activity_edit_mood_dialog_title">此刻的心情:</string>
    <string-array name="activity_edit_mood_dialog_item">
        <item>白开水</item>
        <item>火山爆发</item>
        <item>小忧郁</item>
        <item>小开心</item>
        <item>隔夜饭</item>
        <item>一丁点爱</item>
        <item>雨一直下</item>
        <item>小矛盾</item>
        <item>小惊讶</item>
    </string-array>

    <string name="activity_main_toolbar_drawer_open">Open</string>
    <string name="activity_main_toolbar_drawer_close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_big_picture">BigPictureActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
