<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:gravity="center"
              android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/activity_login_iv_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        app:civ_border_color="#7fffffff"
        app:civ_border_width="2dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="72dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_login_username"/>

        <TextView
            android:id="@+id/activity_login_tv_questions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/activity_login_set_question"
            android:textStyle="bold"/>

    </LinearLayout>

    <EditText
        android:id="@+id/activity_login_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/activity_login_hint_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_login_password"/>

        <TextView
            android:id="@+id/activity_login_tv_find_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/activity_login_find_password"
            android:textStyle="bold"/>
    </LinearLayout>

    <EditText
        android:id="@+id/activity_login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/activity_login_hint_password"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/activity_login_bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_background"
        android:textColor="@color/colorBlackAlpha"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/activity_login_login"/>

</LinearLayout>